[package]
name = "pat"
version = "0.1.0"
edition = "2024"
description = "cat for Parquet files"
license = "MIT"
repository = "https://github.com/ebommes/pat"
homepage = "https://github.com/ebommes/pat"

[dependencies]
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
arrow = { version = "58", default-features = false, features = ["prettyprint"] }
arrow-csv = "58"
arrow-json = "58"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
