[package]
name = "pat"
version = "0.2.0"
edition = "2024"
description = "cat for Parquet files"
license = "MIT"
repository = "https://github.com/ebommes/pat"
homepage = "https://github.com/ebommes/pat"

[dependencies]
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd", "lz4", "object_store"] }
arrow = { version = "58", default-features = false, features = ["prettyprint"] }
arrow-csv = "58"
arrow-json = "58"
object_store = { version = "0.13", features = ["aws", "gcp", "azure", "tokio"] }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
url = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
